Updated server selection UI, and switched MAGE font across the app from Gondola to Roboto to match Android.

--- a/Mage/ChangePasswordView.xib
+++ b/Mage/ChangePasswordView.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="GondolaMage-Regular.otf">
-            <string>GondolaMageRegular</string>
+        <array key="Roboto-Light.ttf">
+            <string>Roboto-Light</string>
         </array>
         <array key="fontawesome-webfont.ttf">
             <string>FontAwesome</string>
@@ -49,20 +49,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3c-RN-eFV">
-                    <rect key="frame" x="16" y="40" width="343" height="55"/>
+                    <rect key="frame" x="16" y="60" width="343" height="55"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJM-Nz-pwD">
-                            <rect key="frame" x="63.5" y="0.0" width="216.5" height="55"/>
+                            <rect key="frame" x="72.5" y="0.0" width="198.5" height="55"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAGE" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XaT-fT-N42">
-                                    <rect key="frame" x="55.5" y="0.0" width="161" height="100"/>
+                                    <rect key="frame" x="55.5" y="0.0" width="143" height="55"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" name="GondolaMageRegular" family="GondolaMage" pointSize="52"/>
+                                    <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="52"/>
                                     <color key="textColor" red="0.066666666669999999" green="0.3294117647" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="W" textAlignment="natural" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cs8-jp-Ggf">
-                                    <rect key="frame" x="0.0" y="0.0" width="47.5" height="55"/>
+                                    <rect key="frame" x="0.0" y="6" width="47.5" height="49"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="50"/>
                                     <color key="textColor" red="0.066666666669999999" green="0.3294117647" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -73,9 +73,9 @@
                             <constraints>
                                 <constraint firstItem="XaT-fT-N42" firstAttribute="top" secondItem="vJM-Nz-pwD" secondAttribute="top" id="0k8-Nv-N8s"/>
                                 <constraint firstItem="XaT-fT-N42" firstAttribute="leading" secondItem="Cs8-jp-Ggf" secondAttribute="trailing" constant="8" id="5ic-fC-apU"/>
-                                <constraint firstItem="Cs8-jp-Ggf" firstAttribute="top" secondItem="vJM-Nz-pwD" secondAttribute="top" id="70P-04-UrS"/>
+                                <constraint firstItem="Cs8-jp-Ggf" firstAttribute="top" secondItem="vJM-Nz-pwD" secondAttribute="top" constant="6" id="70P-04-UrS"/>
                                 <constraint firstAttribute="trailing" secondItem="XaT-fT-N42" secondAttribute="trailing" id="d3z-v3-Bb5"/>
-                                <constraint firstAttribute="bottom" secondItem="XaT-fT-N42" secondAttribute="bottom" constant="-45" id="i6k-yr-K4W"/>
+                                <constraint firstAttribute="bottom" secondItem="XaT-fT-N42" secondAttribute="bottom" id="i6k-yr-K4W"/>
                                 <constraint firstItem="Cs8-jp-Ggf" firstAttribute="leading" secondItem="vJM-Nz-pwD" secondAttribute="leading" id="lmO-33-Ge9"/>
                                 <constraint firstAttribute="height" constant="55" id="o9T-UN-rJa"/>
                                 <constraint firstAttribute="bottom" secondItem="Cs8-jp-Ggf" secondAttribute="bottom" id="vqk-AV-zfs"/>
@@ -90,7 +90,7 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="TJD-JD-6S2">
-                    <rect key="frame" x="0.0" y="107" width="375" height="608"/>
+                    <rect key="frame" x="0.0" y="127" width="375" height="608"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Pe-zw-4ju">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="145"/>
